stop repeat bg on body on ios/safari

--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,8 @@ html,body{
     height: 100%;
     background: linear-gradient(to bottom right, #010220, #174982, #290b35);
     box-sizing: border-box;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 html{
